@@ -1,3 +1,7 @@
+2011-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* mail/smtpmail.el (smtpmail-send-data): Add progress reporter.
+
 2011-05-30  Leo Liu  <sdl.web@gmail.com>
 
 	* net/rcirc.el (rcirc-debug-buffer): Use visible buffer name.
